CymbolParser.py
# Generated from Cymbol.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class CymbolParser ( Parser ):

    grammarFileName = "Cymbol.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'int'", "'return'", "'('", "')'", "','", 
                     "';'", "'{'", "'}'", "'='", "'*'", "'/'", "'+'", "'-'" ]

    symbolicNames = [ "<INVALID>", "TYPEINT", "RETURN", "LP", "RP", "COMMA", 
                      "SEMICOLON", "LB", "RB", "AS", "MUL", "DIV", "PLUS", 
                      "MINUS", "ID", "INT", "BLOCKCOMMENT", "LINECOMMENT", 
                      "WS" ]

    RULE_fileF = 0
    RULE_varDecl = 1
    RULE_typeT = 2
    RULE_funcDecl = 3
    RULE_paramTypeList = 4
    RULE_paramType = 5
    RULE_block = 6
    RULE_assignStat = 7
    RULE_returnStat = 8
    RULE_exprStat = 9
    RULE_exprList = 10
    RULE_stat = 11
    RULE_expr = 12

    ruleNames =  [ "fileF", "varDecl", "typeT", "funcDecl", "paramTypeList", 
                   "paramType", "block", "assignStat", "returnStat", "exprStat", 
                   "exprList", "stat", "expr" ]

    EOF = Token.EOF
    TYPEINT=1
    RETURN=2
    LP=3
    RP=4
    COMMA=5
    SEMICOLON=6
    LB=7
    RB=8
    AS=9
    MUL=10
    DIV=11
    PLUS=12
    MINUS=13
    ID=14
    INT=15
    BLOCKCOMMENT=16
    LINECOMMENT=17
    WS=18

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class FileFContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def funcDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CymbolParser.FuncDeclContext)
            else:
                return self.getTypedRuleContext(CymbolParser.FuncDeclContext,i)


        def varDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CymbolParser.VarDeclContext)
            else:
                return self.getTypedRuleContext(CymbolParser.VarDeclContext,i)


        def EOF(self):
            return self.getToken(CymbolParser.EOF, 0)

        def getRuleIndex(self):
            return CymbolParser.RULE_fileF

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFileF" ):
                listener.enterFileF(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFileF" ):
                listener.exitFileF(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFileF" ):
                return visitor.visitFileF(self)
            else:
                return visitor.visitChildren(self)




    def fileF(self):

        localctx = CymbolParser.FileFContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_fileF)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 28 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 28
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                if la_ == 1:
                    self.state = 26
                    self.funcDecl()
                    pass

                elif la_ == 2:
                    self.state = 27
                    self.varDecl()
                    pass


                self.state = 30 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==CymbolParser.TYPEINT):
                    break

            self.state = 33
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.state = 32
                self.match(CymbolParser.EOF)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VarDeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typeT(self):
            return self.getTypedRuleContext(CymbolParser.TypeTContext,0)


        def ID(self):
            return self.getToken(CymbolParser.ID, 0)

        def expr(self):
            return self.getTypedRuleContext(CymbolParser.ExprContext,0)


        def getRuleIndex(self):
            return CymbolParser.RULE_varDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarDecl" ):
                listener.enterVarDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarDecl" ):
                listener.exitVarDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarDecl" ):
                return visitor.visitVarDecl(self)
            else:
                return visitor.visitChildren(self)




    def varDecl(self):

        localctx = CymbolParser.VarDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_varDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 35
            self.typeT()
            self.state = 36
            self.match(CymbolParser.ID)
            self.state = 39
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CymbolParser.AS:
                self.state = 37
                self.match(CymbolParser.AS)
                self.state = 38
                self.expr(0)


            self.state = 41
            self.match(CymbolParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TypeTContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return CymbolParser.RULE_typeT

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class FormTypeIntContext(TypeTContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CymbolParser.TypeTContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def TYPEINT(self):
            return self.getToken(CymbolParser.TYPEINT, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFormTypeInt" ):
                listener.enterFormTypeInt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFormTypeInt" ):
                listener.exitFormTypeInt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFormTypeInt" ):
                return visitor.visitFormTypeInt(self)
            else:
                return visitor.visitChildren(self)



    def typeT(self):

        localctx = CymbolParser.TypeTContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_typeT)
        try:
            localctx = CymbolParser.FormTypeIntContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 43
            self.match(CymbolParser.TYPEINT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FuncDeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typeT(self):
            return self.getTypedRuleContext(CymbolParser.TypeTContext,0)


        def ID(self):
            return self.getToken(CymbolParser.ID, 0)

        def block(self):
            return self.getTypedRuleContext(CymbolParser.BlockContext,0)


        def paramTypeList(self):
            return self.getTypedRuleContext(CymbolParser.ParamTypeListContext,0)


        def getRuleIndex(self):
            return CymbolParser.RULE_funcDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncDecl" ):
                listener.enterFuncDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncDecl" ):
                listener.exitFuncDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncDecl" ):
                return visitor.visitFuncDecl(self)
            else:
                return visitor.visitChildren(self)




    def funcDecl(self):

        localctx = CymbolParser.FuncDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_funcDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 45
            self.typeT()
            self.state = 46
            self.match(CymbolParser.ID)
            self.state = 47
            self.match(CymbolParser.LP)
            self.state = 49
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CymbolParser.TYPEINT:
                self.state = 48
                self.paramTypeList()


            self.state = 51
            self.match(CymbolParser.RP)
            self.state = 52
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ParamTypeListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def paramType(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CymbolParser.ParamTypeContext)
            else:
                return self.getTypedRuleContext(CymbolParser.ParamTypeContext,i)


        def getRuleIndex(self):
            return CymbolParser.RULE_paramTypeList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParamTypeList" ):
                listener.enterParamTypeList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParamTypeList" ):
                listener.exitParamTypeList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParamTypeList" ):
                return visitor.visitParamTypeList(self)
            else:
                return visitor.visitChildren(self)




    def paramTypeList(self):

        localctx = CymbolParser.ParamTypeListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_paramTypeList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 54
            self.paramType()
            self.state = 59
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==CymbolParser.COMMA:
                self.state = 55
                self.match(CymbolParser.COMMA)
                self.state = 56
                self.paramType()
                self.state = 61
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ParamTypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typeT(self):
            return self.getTypedRuleContext(CymbolParser.TypeTContext,0)


        def ID(self):
            return self.getToken(CymbolParser.ID, 0)

        def getRuleIndex(self):
            return CymbolParser.RULE_paramType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParamType" ):
                listener.enterParamType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParamType" ):
                listener.exitParamType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParamType" ):
                return visitor.visitParamType(self)
            else:
                return visitor.visitChildren(self)




    def paramType(self):

        localctx = CymbolParser.ParamTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_paramType)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62
            self.typeT()
            self.state = 63
            self.match(CymbolParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BlockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CymbolParser.StatContext)
            else:
                return self.getTypedRuleContext(CymbolParser.StatContext,i)


        def getRuleIndex(self):
            return CymbolParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = CymbolParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            self.match(CymbolParser.LB)
            self.state = 69
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CymbolParser.TYPEINT) | (1 << CymbolParser.RETURN) | (1 << CymbolParser.LP) | (1 << CymbolParser.PLUS) | (1 << CymbolParser.MINUS) | (1 << CymbolParser.ID) | (1 << CymbolParser.INT))) != 0):
                self.state = 66
                self.stat()
                self.state = 71
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 72
            self.match(CymbolParser.RB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AssignStatContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(CymbolParser.ID, 0)

        def expr(self):
            return self.getTypedRuleContext(CymbolParser.ExprContext,0)


        def getRuleIndex(self):
            return CymbolParser.RULE_assignStat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignStat" ):
                listener.enterAssignStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignStat" ):
                listener.exitAssignStat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignStat" ):
                return visitor.visitAssignStat(self)
            else:
                return visitor.visitChildren(self)




    def assignStat(self):

        localctx = CymbolParser.AssignStatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_assignStat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            self.match(CymbolParser.ID)
            self.state = 75
            self.match(CymbolParser.AS)
            self.state = 76
            self.expr(0)
            self.state = 77
            self.match(CymbolParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ReturnStatContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(CymbolParser.ExprContext,0)


        def getRuleIndex(self):
            return CymbolParser.RULE_returnStat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturnStat" ):
                listener.enterReturnStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturnStat" ):
                listener.exitReturnStat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturnStat" ):
                return visitor.visitReturnStat(self)
            else:
                return visitor.visitChildren(self)




    def returnStat(self):

        localctx = CymbolParser.ReturnStatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_returnStat)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self.match(CymbolParser.RETURN)
            self.state = 81
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CymbolParser.LP) | (1 << CymbolParser.PLUS) | (1 << CymbolParser.MINUS) | (1 << CymbolParser.ID) | (1 << CymbolParser.INT))) != 0):
                self.state = 80
                self.expr(0)


            self.state = 83
            self.match(CymbolParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExprStatContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(CymbolParser.ExprContext,0)


        def getRuleIndex(self):
            return CymbolParser.RULE_exprStat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprStat" ):
                listener.enterExprStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprStat" ):
                listener.exitExprStat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprStat" ):
                return visitor.visitExprStat(self)
            else:
                return visitor.visitChildren(self)




    def exprStat(self):

        localctx = CymbolParser.ExprStatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_exprStat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            self.expr(0)
            self.state = 86
            self.match(CymbolParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExprListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CymbolParser.ExprContext)
            else:
                return self.getTypedRuleContext(CymbolParser.ExprContext,i)


        def getRuleIndex(self):
            return CymbolParser.RULE_exprList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprList" ):
                listener.enterExprList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprList" ):
                listener.exitExprList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprList" ):
                return visitor.visitExprList(self)
            else:
                return visitor.visitChildren(self)




    def exprList(self):

        localctx = CymbolParser.ExprListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_exprList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            self.expr(0)
            self.state = 93
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==CymbolParser.COMMA:
                self.state = 89
                self.match(CymbolParser.COMMA)
                self.state = 90
                self.expr(0)
                self.state = 95
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varDecl(self):
            return self.getTypedRuleContext(CymbolParser.VarDeclContext,0)


        def returnStat(self):
            return self.getTypedRuleContext(CymbolParser.ReturnStatContext,0)


        def assignStat(self):
            return self.getTypedRuleContext(CymbolParser.AssignStatContext,0)


        def exprStat(self):
            return self.getTypedRuleContext(CymbolParser.ExprStatContext,0)


        def getRuleIndex(self):
            return CymbolParser.RULE_stat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStat" ):
                listener.enterStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStat" ):
                listener.exitStat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStat" ):
                return visitor.visitStat(self)
            else:
                return visitor.visitChildren(self)




    def stat(self):

        localctx = CymbolParser.StatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_stat)
        try:
            self.state = 100
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 96
                self.varDecl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 97
                self.returnStat()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 98
                self.assignStat()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 99
                self.exprStat()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return CymbolParser.RULE_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class SignedExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CymbolParser.ExprContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(CymbolParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSignedExpr" ):
                listener.enterSignedExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSignedExpr" ):
                listener.exitSignedExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSignedExpr" ):
                return visitor.visitSignedExpr(self)
            else:
                return visitor.visitChildren(self)


    class FunctionCallExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CymbolParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(CymbolParser.ID, 0)
        def exprList(self):
            return self.getTypedRuleContext(CymbolParser.ExprListContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionCallExpr" ):
                listener.enterFunctionCallExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionCallExpr" ):
                listener.exitFunctionCallExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionCallExpr" ):
                return visitor.visitFunctionCallExpr(self)
            else:
                return visitor.visitChildren(self)


    class MulDivExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CymbolParser.ExprContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CymbolParser.ExprContext)
            else:
                return self.getTypedRuleContext(CymbolParser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMulDivExpr" ):
                listener.enterMulDivExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMulDivExpr" ):
                listener.exitMulDivExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMulDivExpr" ):
                return visitor.visitMulDivExpr(self)
            else:
                return visitor.visitChildren(self)


    class IntExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CymbolParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def INT(self):
            return self.getToken(CymbolParser.INT, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIntExpr" ):
                listener.enterIntExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIntExpr" ):
                listener.exitIntExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIntExpr" ):
                return visitor.visitIntExpr(self)
            else:
                return visitor.visitChildren(self)


    class ParenExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CymbolParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(CymbolParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParenExpr" ):
                listener.enterParenExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParenExpr" ):
                listener.exitParenExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParenExpr" ):
                return visitor.visitParenExpr(self)
            else:
                return visitor.visitChildren(self)


    class AddSubExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CymbolParser.ExprContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CymbolParser.ExprContext)
            else:
                return self.getTypedRuleContext(CymbolParser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAddSubExpr" ):
                listener.enterAddSubExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAddSubExpr" ):
                listener.exitAddSubExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAddSubExpr" ):
                return visitor.visitAddSubExpr(self)
            else:
                return visitor.visitChildren(self)


    class VarIdExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CymbolParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(CymbolParser.ID, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarIdExpr" ):
                listener.enterVarIdExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarIdExpr" ):
                listener.exitVarIdExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarIdExpr" ):
                return visitor.visitVarIdExpr(self)
            else:
                return visitor.visitChildren(self)



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = CymbolParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 24
        self.enterRecursionRule(localctx, 24, self.RULE_expr, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                localctx = CymbolParser.FunctionCallExprContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 103
                self.match(CymbolParser.ID)
                self.state = 104
                self.match(CymbolParser.LP)
                self.state = 106
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CymbolParser.LP) | (1 << CymbolParser.PLUS) | (1 << CymbolParser.MINUS) | (1 << CymbolParser.ID) | (1 << CymbolParser.INT))) != 0):
                    self.state = 105
                    self.exprList()


                self.state = 108
                self.match(CymbolParser.RP)
                pass

            elif la_ == 2:
                localctx = CymbolParser.SignedExprContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 109
                localctx.op = self._input.LT(1)
                _la = self._input.LA(1)
                if not(_la==CymbolParser.PLUS or _la==CymbolParser.MINUS):
                    localctx.op = self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 110
                self.expr(6)
                pass

            elif la_ == 3:
                localctx = CymbolParser.VarIdExprContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 111
                self.match(CymbolParser.ID)
                pass

            elif la_ == 4:
                localctx = CymbolParser.IntExprContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 112
                self.match(CymbolParser.INT)
                pass

            elif la_ == 5:
                localctx = CymbolParser.ParenExprContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 113
                self.match(CymbolParser.LP)
                self.state = 114
                self.expr(0)
                self.state = 115
                self.match(CymbolParser.RP)
                pass

